--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -12,7 +12,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#user" class="left-align white-text">
+                                <a class="left-align white-text">
                                     <i class="material-icons">person</i> <span class="tab-header"> User </span>
                                 </a>
                             </li>
@@ -42,7 +42,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-green-1">
-                                <a href="#award" class="left-align white-text">
+                                <a class="left-align white-text">
                                     <i class="material-icons">grade</i> <span class="tab-header"> Award </span>
                                 </a>
                             </li>
