--- a/views/award/create.ejs
+++ b/views/award/create.ejs
@@ -12,7 +12,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-green-1">
-                                <a href="#create" class="left-align white-text">
+                                <a class="left-align white-text">
                                     Create New Award
                                 </a>
                             </li>
@@ -21,7 +21,7 @@
                     <div class="card-content">
                         <div id="create">
                             <div class="row">
-                                <form class="col s12" method="get" action="save" onsubmit="return validateAward();">
+                                <form class="col s12" method="get" action="/award/save" onsubmit="return validateAward();">
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <i class="material-icons prefix">verified_user</i>
