--- a/views/goal/log.ejs
+++ b/views/goal/log.ejs
@@ -36,7 +36,7 @@
                         <div class="card-tabs">
                             <ul class="tabs tabs-fixed-width">
                                 <li class="tab">
-                                    <a href="#log" class="center-align dw-blue-1 white-text">
+                                    <a class="center-align dw-blue-1 white-text">
                                         <span class="tab-header"> Progress Log </span>
                                     </a>
                                 </li>
