--- a/views/goal/show.ejs
+++ b/views/goal/show.ejs
@@ -37,7 +37,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#goal" class="left-align white-text">
+                                <a class="left-align white-text">
                                     <h5><%= user.name %>'s Goal</h5>
                                 </a>
                             </li>
