--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,7 +1,9 @@
 <header>
 <nav>
     <div class="nav-wrapper dw-blue-2">
-        <a href="" class="brand-logo"><i class="material-icons"></i>My Goals</a>
+        <a class="brand-logo">
+            <img src="../images/deerwalk_goals-01.png" style="height: auto; width: 200px;">
+        </a>
         <ul class="right hide-on-med-and-down" style="margin-right: 3%;">
             <li>
                 <a>
