--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -10,7 +10,7 @@
                 <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width">
                         <li class="tab dw-blue-1">
-                            <a href="#user" class="left-align white-text">
+                            <a href="" class="left-align white-text">
                                 <i class="material-icons">person</i> <span class="tab-header"> My Profile </span>
                             </a>
                         </li>
@@ -40,7 +40,7 @@
                 <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width">
                         <li class="tab dw-green-1">
-                            <a href="#user" class="left-align white-text">
+                            <a href="" class="left-align white-text">
                                 <i class="material-icons">my_location</i> <span class="tab-header"> My Goals </span>
                             </a>
                         </li>
@@ -71,7 +71,7 @@
                 <div class="card-tabs">
                     <ul class="tabs tabs-fixed-width">
                         <li class="tab dw-blue-1">
-                            <a href="#user" class="left-align white-text">
+                            <a href="" class="left-align white-text">
                                 <i class="material-icons">group</i> <span class="tab-header"> Subordinates </span>
                             </a>
                         </li>
