--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -22,7 +22,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col l4 s6 m4 offset-l4 offset-s3 offset-m4">
-                        <a><img src="../../profilePictures/<%=user.imageName%>" onerror="this.src='../../profilePictures/default.jpg'" class="circle responsive-img" id="profileImage"></a>
+                        <a><img src="../../profilePictures/<%=user.imageName%>" onerror="this.src='../../profilePictures/default.jpg'" style="height: 200px; width: 200px;" class="circle responsive-img" id="profileImage"></a>
                             <div class="overlay">
                                 <a href="./profilePicture" class="icon">
                                     <i class="material-icons circle grey small white-text tooltipped"
@@ -46,7 +46,7 @@
             </h6>
         </div>
         <div class="row">
-            <h4 class="center-align">All Goals</h4>
+            <h4 class="center-align heading">All Goals</h4>
             <hr>
             <div class="col l12 s12 m12">
                 <div class="card">
@@ -70,10 +70,10 @@
                                 <div class="col l12 s12 m12">
                                     <table>
                                         <thead>
-                                        <th> S. N. </th>
-                                        <th> Goal </th>
-                                        <th> Set Date </th>
-                                        <th> Award </th>
+                                            <th> S. N. </th>
+                                            <th> Goal </th>
+                                            <th> Set Date </th>
+                                            <th> Award </th>
                                         </thead>
                                         <tbody>
                                         <% i = 1
