--- a/views/user/subordinates.ejs
+++ b/views/user/subordinates.ejs
@@ -16,7 +16,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#subordinate" class="left-align white-text">
+                                <a class="left-align white-text">
                                     <i class="material-icons">person</i> <span class="tab-header"> <%= subordinate.name %> </span>
                                 </a>
                             </li>
