--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -6,14 +6,14 @@
         <div class="row">
             <div class="col s12 m10 l8 offset-l2 offset-m1" style="margin-top: 2%">
                 <div class="center-align">
-                    <img src="../images/fav.png" style="height: 25%; width: 25%;">
+                    <img src="../images/deerwalk_goals.png" style="height: 75%; width: 60%;">
                 </div>
                 <div class="card">
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#login" class="left-align white-text">
-                                    Please login in
+                                <a class="left-align white-text">
+                                    <span class="tab-header">Please login in</span>
                                 </a>
                             </li>
                         </ul>
