--- a/views/award/edit.ejs
+++ b/views/award/edit.ejs
@@ -12,7 +12,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#create" class="left-align white-text">
+                                <a class="left-align white-text">
                                     Edit Award
                                 </a>
                             </li>
@@ -21,7 +21,7 @@
                     <div class="card-content">
                         <div id="create">
                             <div class="row">
-                                <form class="col s12" method="get" action="update" onsubmit="return validateAward();">
+                                <form class="col s12" method="get" action="/award/update" onsubmit="return validateAward();">
                                     <input type="hidden" value="<%=award.id%>" name="id" id="id"/>
                                     <div class="row">
                                         <div class="input-field col s12">
