--- a/views/award/list.ejs
+++ b/views/award/list.ejs
@@ -5,19 +5,19 @@
     <div class="container">
         <div class="row">
             <h4 class="center-align col l9 m8 s12"> All Awards </h4>
-            <a class="btn col l3 m4 s12" style="margin-top: 3%" href="./create">Create New Award</a>
+            <a class="btn col l3 m4 s12" style="margin-top: 3%" href="/award/create">Create New Award</a>
         </div>
         <hr>
         <div class="row">
             <div class="col l12 s12 m12">
                 <table class="bordered">
                     <thead>
-                    <th> S. No. </th>
-                    <th> Award Title </th>
-                    <th>Icon Name</th>
-                    <th>Icon Color</th>
-                    <th>Icon</th>
-                    <th> Action </th>
+                        <th> S. No. </th>
+                        <th> Award Title </th>
+                        <th>Icon Name</th>
+                        <th>Icon Color</th>
+                        <th>Icon</th>
+                        <th> Action </th>
                     </thead>
                     <tbody>
                     <% i = 1 %>
@@ -28,7 +28,7 @@
                         <td> <%= award.iconName %> </td>
                         <td> <%= award.iconColor %> </td>
                         <td><i class="material-icons circle <%=award.iconColor%>"><%=award.iconName%></i></td>
-                        <td><a href="./edit?id=<%=award.id%>">Edit </a> | <a href="./delete?id=<%=award.id%>">Delete</a> </td>
+                        <td><a href="/award/edit?id=<%=award.id%>">Edit </a> | <a href="/award/delete?id=<%=award.id%>">Delete</a> </td>
                     </tr>
                     <% }) %>
                     </tbody>
