--- a/views/goal/create.ejs
+++ b/views/goal/create.ejs
@@ -13,7 +13,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#create" class="left-align white-text">
+                                <a class="left-align white-text">
                                     Create new goal
                                 </a>
                             </li>
