--- a/views/user/password.ejs
+++ b/views/user/password.ejs
@@ -10,7 +10,7 @@
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
                             <li class="tab dw-blue-1">
-                                <a href="#password" class="left-align white-text">
+                                <a class="left-align white-text">
                                     <i class="material-icons">edit</i> <span class="tab-header"> Change Password </span>
                                 </a>
                             </li>
