Base Url Update

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer transparent">
+<footer class="page-footer transparent center-align">
     <div class="footer-copyright dw-blue-1">
         <div class="container">
             © <script language="JavaScript" type="text/javascript">
