--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title> <%= title %></title>
-    <base href = "http://localhost:3000/" />
+    <base href="http://localhost:3000"/>
     <link rel="icon"
           type="image/png"
-          href="images/fav.png">
+          href="/images/fav.png">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
